<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grass"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Intermediate" >

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/button"
        android:text="@string/Contact"
        android:textColor="@android:color/white"
        android:textSize="@dimen/big"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:background="@drawable/button"
        android:text="@string/back"
        android:textColor="@android:color/white"
        android:textSize="@dimen/big"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="19dp"
        android:background="@drawable/button"
        android:text="@string/user"
        android:textColor="@android:color/white"
        android:textSize="@dimen/big"
        android:textStyle="bold" />

    <Button
        android:id="@+id/Button01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button1"
        android:layout_alignLeft="@+id/button3"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button"
        android:text="@string/set"
        android:textColor="@android:color/white"
        android:textSize="@dimen/big"
        android:textStyle="bold" />

</RelativeLayout>